<resources>
    <string name="app_name">Station</string>
    <string name="splash_title_bottom">公益 环保 共享 廉价出行</string>
    <string name="mobile">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="sign">登录</string>
    <string name="license_plate">车牌:</string>
    <string name="model">车型:</string>
    <string name="to_pay">投币上车（支付）</string>
    <string name="has_publish">行程已发布，请等待</string>
    <string name="triping_finish">已到达目的站点</string>
    <string name="reduce">减免</string>
    <string name="after_reduce">您支付了</string>
    <string name="mobile_not_empty">手机号或者验证码不能为空</string>
    <string name="phone_not_empty">手机号不能为空</string>
    <string name="pay_success">支付成功</string>
    <string name="close">关闭</string>
    <string name="car_has_come">请确认，避免错过站点</string>
    <string name="gas_pay">燃油分摊费</string>
    <string name="clear_history">清空历史记录</string>
    <string name="invalid_mobile">手机号格式不正确</string>
    <string name="agreement">同意《顺风车三方服务协议》</string>
    <string name="my_location">「我的位置」</string>
    <string name="set_location">点击设置目的地</string>
    <string name="coming_stop">即将进站，请稍等</string>
    <string name="invalid_code">验证码格式不正确</string>

    <!-- Toast Value -->
    <string name="verify_code_send_success">已经将短信验证码发送到您的手机</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <!-- Passenger View -->

    <!-- custom exit dialog: 自定义退出应用对话框 -->

    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="qpay">QQ钱包</string>
    <string name="upmp">银联</string>
    <string name="bfb">百度钱包</string>
    <string name="jdpay">京东支付</string>
    <string name="amount">支付金额</string>
    <string name="missingImage">图片加载失败</string>
</resources>
