<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/width30"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/width16"
                    android:layout_height="@dimen/width24"
                    android:background="@drawable/phone" />
            </LinearLayout>

            <EditText
                android:id="@+id/mobile"
                style="@style/edit_info"
                android:layout_width="0dp"
                android:layout_height="@dimen/width30"
                android:layout_weight="0.9"
                android:hint="@string/mobile"
                android:inputType="phone" />

        </LinearLayout>

        <View style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/width30"
                android:layout_weight="0.13"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/width22"
                    android:layout_height="@dimen/width16"
                    android:background="@drawable/verification_code" />
            </LinearLayout>


            <EditText
                android:id="@+id/verification_code"
                style="@style/edit_info"
                android:layout_width="0dp"
                android:layout_height="@dimen/width30"
                android:layout_weight="0.87"
                android:hint="@string/verification_code"
                android:inputType="number" />

            <TextView
                android:id="@+id/send_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/width30"
                android:gravity="center"
                android:text="@string/send_verification_code"
                android:textColor="@color/bg_color"
                android:textSize="@dimen/text_size16" />

        </LinearLayout>

        <View style="@style/line" />

        <Button
            android:id="@+id/sign"
            style="@style/button"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign" />
    </LinearLayout>


</LinearLayout>