<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/width40"
        android:background="@drawable/white_corner_normal"
        android:padding="15dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/pay_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/width69"
            android:gravity="center"
            android:text="@string/pay_success"
            android:textColor="@color/green_ori"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pay_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pay_success"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="4.00元"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/pay_amount"
            android:layout_marginTop="15dp"
            android:background="@color/line_color" />

        <TextView
            android:id="@+id/pop_sponsor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_marginTop="@dimen/width30"
            android:gravity="center"
            android:text="本次行程由某某某企业赞助"
            android:textColor="@color/dark_grey"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/pop_incentive_fund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pop_sponsor"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="您获得0.88鼓励金"
            android:textColor="@color/dark_grey"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pop_incentive_fund"
            android:layout_marginTop="@dimen/width18"
            android:layout_marginBottom="@dimen/width6"
            android:gravity="center"
            android:text="请至账户余额中查收"
            android:textColor="@color/bg_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/reduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pop_incentive_fund"
            android:layout_marginTop="100dp"
            android:text="@string/reduce"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/after_reduce"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="0.88元"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/after_reduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reduce"
            android:layout_marginTop="40dp"
            android:text="@string/after_reduce"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/after_reduce"
            android:layout_alignBottom="@+id/after_reduce"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="3.12元"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/paying_now"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/bg_color"
            android:gravity="center"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size17" />

    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/width104"
        android:layout_height="@dimen/width104"
        android:layout_gravity="center|top"
        android:background="@drawable/sucess" />
</FrameLayout>
